--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,15 +22,25 @@ jobs:
       run: nuget restore WelcomeScreenCustomizer.sln
       
     - name: Build Solution
-      run: msbuild WelcomeScreenCustomizer.sln /p:Configuration=Release
+      run: msbuild WelcomeScreenCustomizer.sln /p:Configuration=Release /p:Platform="Any CPU"
+      
+    - name: List Build Output
+      run: |
+        dir /s bin
+        dir /s WelcomeScreenCustomizer.exe
       
     - name: Create Release ZIP
       run: |
-        Compress-Archive -Path "bin\Release\WelcomeScreenCustomizer.exe" -DestinationPath "WelcomeScreenCustomizer.zip"
+        New-Item -ItemType Directory -Force -Path .\Release
+        Copy-Item ".\bin\Release\WelcomeScreenCustomizer.exe" -Destination ".\Release\"
+        Copy-Item ".\app.ico" -Destination ".\Release\"
+        Compress-Archive -Path ".\Release\*" -DestinationPath "WelcomeScreenCustomizer.zip" -Force
       
     - name: Create Release
       id: create_release
       uses: softprops/action-gh-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         files: WelcomeScreenCustomizer.zip
         draft: false
