Update project metadata and version to 1.0.3

--- a/WelcomeScreenCustomizer.csproj
+++ b/WelcomeScreenCustomizer.csproj
@@ -12,9 +12,14 @@
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <ApplicationManifest>app.manifest</ApplicationManifest>
     <ApplicationIcon>app.ico</ApplicationIcon>
-    <Version>1.0.0</Version>
-    <FileVersion>1.0.0.0</FileVersion>
-    <AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <Version>1.0.3</Version>
+    <FileVersion>1.0.3.0</FileVersion>
+    <AssemblyVersion>1.0.3.0</AssemblyVersion>
+    <Title>Windows 11 Welcome Screen Customizer</Title>
+    <Description>A utility to customize the Windows 11 welcome/login screen background</Description>
+    <Company>ninjaeon</Company>
+    <Product>Windows 11 Welcome Screen Customizer</Product>
+    <Copyright>Copyright 2024</Copyright>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
